# lpc55s69_rompatch_sample

./: .gitignore  CMakeLists.txt  Makefile  README.md  entry.S  foo.s  link.x  main_ns.c  openocd.gdb  small.c
